# tictactoe-minimax

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: minimax.h  options.h  result.h  tictactoe.h  utils.h
src/: main.cpp  minimax.cpp  minimax.h  options.cpp  options.h  result.h  tictactoe.cpp  tictactoe.h  utils.cpp
